2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c (print_ucs4_real): Fix startwidth in dry run.

2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Several fixes to ieee1275 and big-endian video.

2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Add missing exports on mips.

2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/videotest_checksum.c (videotest_checksum): Error out
	if no unifont is found.
	Restore original keyboard.

2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_setup_video): Add
	GRUB_VIDEO_ADAPTER_CAPTURE: to handled drived ids.

2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	First automated video test (running videotest and comparing results)

2013-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/videotest.c: Reduce flickering and draw 6 squares
	instead of 2 to have full RGB/CMY test pattern.

2013-04-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Add few more tests.

2013-04-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/arc/arc.h: Account for missing "other" peripheral on
	ARCS. All users updated.

2013-04-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/loongson/init.c: Support halt for loongson 2E.

2013-04-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/amiga.c: Fix size of checksummed block.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Use -mcmodel=large on x86_64-emu as well.
	Reported by: qwertial.

2013-04-29  Vladimir Testov <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/circular_progress.c: Set start_angle in degrees
	with syntax "XXX deg"/"XXX °".

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Make PCI init in i386-qemu port more robust.

2013-04-29  Vladimir Testov <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: Refresh first_shown_entry value when
	cached view is reused.